# calculator

./: calculator.cpp
SP_lab2/: CMakeCache.txt  CMakeLists.txt  MakeFile
SP_lab2/src/: calculator.cpp  calculator.h  main.cpp
patch/: 0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch
